--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -193,6 +193,24 @@ Examples:
 * `edit 1 -p 91234567 -e johndoe@example.com`
 * `edit 2 -n James`
 
+=== Modify permissions of an emplyee : `modifypermission`
+
+Modifies the permissions of an employee.
+
+Format : `modifypermission INDEX [-a PERMISSION_TO_ADD]... [-r PERMISSION_TO_REMOVE]...`
+
+* Modifies the permission of the person at the specified INDEX. The index refers to the index number shown in the displayed person list. The index must be a positive integer 1, 2, 3, …​
+
+****
+* To use this command, you must be logged in with "ASSIGN_PERMISSION" permission.
+* At least one of the parameters must be provided
+****
+
+Examples:
+
+* modifypermission 1 -a ADD_EMPLOYEE
+* modifypermission 2 -a REMOVE_EMPLOYEE -r ADD_EMPLOYEE
+
 === Change password : `passwd`
 
 Changes user password.
